--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,8 @@ jobs:
       - name: Test import
         run: make test-import
 
-  build:
-    name: Build package including generated API
+  build_test:
+    name: Build and Testing
     needs: [smoke-tests]
     runs-on: ubuntu-latest
 
@@ -127,12 +127,6 @@ jobs:
           rm -rf dist
           make build-install
 
-  test:
-    name: Testing and coverage
-    needs: [build]
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Unit testing
         run: make unittest
         env:
@@ -149,12 +143,54 @@ jobs:
           path: cov_html
           retention-days: 7
 
+      - name: Build library source and wheel artifacts
+        uses: pyansys/actions/build-library@v3
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+
   docs:
     name: Build Documentation
-    needs: [doc-style, build]
+    needs: [doc-style]
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
+
+      - name: Create initial wheel and install
+        run: make build-install
+
+      - name: Install gRPC API from private PyPI (temp)
+        run: |
+          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.GH_TOKEN }}
+
+      - name: Pull docker image
+        run: make docker-pull
+        env:
+          SYC_IMAGE_TAG: v23.1.0
+
+      - name: Generate API code
+        run: make generate-api
+        env:
+          SYC_LAUNCH_CONTAINER: 1
+          SYC_IMAGE_TAG: v23.1.0
+
+      - name: Rebuild/reinstall wheel containing generated API
+        run: |
+          rm -rf dist
+          make build-install
+
       - name: Build HTML
         run: |
           pip install .[doc]
@@ -163,8 +199,8 @@ jobs:
         env:
           PYSYC_DOC_BUILD_VERSION: 23_1
 
-      # This fails on GitHub so disable for now
-      # ========================================
+      # This is hanging on GitHub so disable for now
+      # ============================================
       # - name: Build PDF Documentation
       #   run: |
       #     sudo apt update
@@ -185,16 +221,16 @@ jobs:
       #     path: doc/_build/latex/*.pdf
       #     retention-days: 7
 
-  package:
-    name: Package library
-    needs: [test, docs]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Build library source and wheel artifacts
-        uses: pyansys/actions/build-library@v3
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  # package:
+  #   name: Package library
+  #   needs: [build_test, docs]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Build library source and wheel artifacts
+  #       uses: pyansys/actions/build-library@v3
+  #       with:
+  #         library-name: ${{ env.PACKAGE_NAME }}
+  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   upload_dev_docs:
     name: Upload dev documentation
