--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,8 @@ jobs:
       - name: Test import
         run: make test-import
 
-  build_test:
-    name: Build and Testing
+  build:
+    name: Build package, including generated API
     needs: [smoke-tests]
     runs-on: ubuntu-latest
 
@@ -127,6 +127,49 @@ jobs:
           rm -rf dist
           make build-install
 
+      - name: Build library source and wheel artifacts
+        uses: pyansys/actions/build-library@v3
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+
+  build-test:
+    name: Testing
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+
+      - name: Download package
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.PACKAGE_NAME }}-artifacts
+          path: dist
+
+      - name: Install pysystemcoupling
+        run: pip install -q --force-reinstall dist/*.whl > dev/null
+
+      - name: Install gRPC API from private PyPI (temp)
+        run: |
+          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.GH_TOKEN }}
+
+      - name: Pull docker image
+        run: make docker-pull
+        env:
+          SYC_IMAGE_TAG: v23.1.0
+
       - name: Unit testing
         run: make unittest
         env:
@@ -145,7 +188,7 @@ jobs:
 
   docs:
     name: Build Documentation
-    needs: [doc-style]
+    needs: [doc-style, build-test] # build-test for now
     runs-on: ubuntu-latest
 
     steps:
@@ -215,22 +258,22 @@ jobs:
       #     path: doc/_build/latex/*.pdf
       #     retention-days: 7
 
-  package:
-    name: Package library
-    needs: [build_test, docs]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Build library source and wheel artifacts
-        uses: pyansys/actions/build-library@v3
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  # package:
+  #   name: Package library
+  #   needs: [build_test]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Build library source and wheel artifacts
+  #       uses: pyansys/actions/build-library@v3
+  #       with:
+  #         library-name: ${{ env.PACKAGE_NAME }}
+  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   upload_dev_docs:
     name: Upload dev documentation
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [package]
+    needs: [docs]
     steps:
       - name: Deploy the latest documentation
         uses: pyansys/actions/doc-deploy-dev@v3
