--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -220,7 +220,9 @@ jobs:
           path: dist
 
       - name: Install pysystemcoupling with doc dependencies
-        run: pip install -q --force-reinstall dist/*.whl[doc] > /dev/null
+        run: |
+          wheel_name=`echo dist/*.whl`
+          pip install -q --force-reinstall ${wheel_name}[doc] > /dev/null
 
       - name: Install gRPC API from private PyPI (temp)
         run: |
