--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ maintainers = [
 ]
 dependencies = [
 	"ansys-api-systemcoupling==0.1.0",
+        "ansys-platform-instancemanagement~=1.0",
 	"grpcio>=1.30.0",
 	"grpcio-status>=1.30.0,<1.60.2",
 	"googleapis-common-protos>=1.50.0",
