--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ classesgen = [
 
 	# NB
 	# black and isort are called programmatically to keep generated code
-	# consistent with style elsewhere. We need to keep the versions in
+	# consistent with style elsewhere. We need to keep these versions in
 	# sync with the precommit dependencies.
 	"black==24.3.0",
 	"isort==5.13.2",
