--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -26,6 +26,7 @@ Vocab = ANSYS
 
 # Apply the following styles
 BasedOnStyles = Vale, Google
+Vale.Terms = NO
 
 TokenIgnores = (:(func|class|meth|attr|py):`(?:.|\n)*?`)|(<.*>)|(.. code::.*\n| .*)
 
